--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 header > section .header-background{
     border: 1px solid black;
     width: 100%;
-    height: 16vh;
+    height: 200px;
     background-image: url("../img/pattern.png");
     background-color:rgb(83, 146, 255);
 }
@@ -16,3 +16,23 @@ section .header-background img{
     margin-top:70px;
     margin-left:15px;
 }
+
+main .article h1{
+    font-size:80px;
+}
+
+.article p {
+    font-size: 25px;
+    margin-left:5px;
+    color:lightgray;
+    font-weight:600;
+}
+
+.article p > a {
+
+    text-decoration:none;
+    color:rgb(83, 146, 255);
+}
+
+
+
