--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 header > section .header-background{
-    border: 1px solid black;
     width: 100%;
     height: 200px;
     background-image: url("../img/pattern.png");
@@ -49,11 +48,40 @@ main .article h1{
 
 .article .main-paragraph {
     margin-top:20px;
-    margin-bottom:10px;
+    margin-bottom:20px;
 }
 
 .article .main-paragraph span{
 background-color:yellow;
 }
+
+.article table {
+    width:99%;
+    margin-top:20px;
+    margin-bottom:20px;
+    margin-right:5px;
+    border-collapse: collapse;
+}
+
+.article thead {
+    background-color:rgb(54, 148, 255);
+    color:white;
+}
+
+.article .light-blue {
+
+    background-color:lightblue;
+
+}
+
+.article td {
+
+    width:500px;
+}
+
+
+
+
+
 
 
