--- a/css/style-bonus.css
+++ b/css/style-bonus.css
@@ -17,8 +17,8 @@ header > section .header-background{
 }
 
 section .header-background img{
-    max-width:20%;
-    margin-top:70px;
+    max-width:400px;
+    margin-top:90px;
     margin-left:15px;
 }
 
