--- a/css/style-bonus.css
+++ b/css/style-bonus.css
@@ -1,3 +1,4 @@
+/* Global Settings */
 *{
     box-sizing:border-box;
     margin:0;
@@ -9,6 +10,7 @@ main {
     width:80%;
 }
 
+/* Header CSS */
 header > section .header-background{
     width: 100%;
     height: 200px;
@@ -22,6 +24,9 @@ section .header-background img{
     margin-left:15px;
 }
 
+/* -- */
+/* Main CSS */
+/* article */
 .article{
     margin-left:10px;
 }
@@ -36,8 +41,6 @@ main .article h1{
     color:gray;
     font-weight:600;
 }
-
-
 
 .undertitle.date-time{
     font-size:15px;
@@ -89,6 +92,8 @@ background-color:yellow;
     width:500px;
 }
 
+/* -- */
+/* Related Articles */
 .related-articles p{
     font-size:35px;
     margin-bottom:20px;
@@ -109,9 +114,11 @@ background-color:yellow;
     margin-left:15px;
 }
 
+/* images */
 .image-with-title.img1{
     background-image: url("../img/monitor.jpg");
 }
+
 .image-with-title.img2{
     background-image: url("../img/graph.jpg");
 }
