--- a/css/style-bonus.css
+++ b/css/style-bonus.css
@@ -56,6 +56,7 @@ main .article h1{
 .article img{
     display:block;
     margin-bottom:5px;
+    max-width:89vw;
 }
 
 .article .photo-description{
